--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <body bgcolor="pink">
 <h1> Name:-Tanuja Dattatray Bawche </h1>
 <p> Address:-panvi khandala post, chandgaon Tal.vaijapur </p>
-<a href="www.google.com">google</a>
+<a href="www.google.com">google</a><br>
+<a href="www.tanuja.com">tanuja</a>
  <marquee>
 <br>
 <img src="abj.jpg">
